// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test state handler test LITStateHandler set_value 1`] = `
Immutable.Map {
  "value": Immutable.Map {
    "key": "value",
  },
}
`;

exports[`test state handler test LITStateHandler set_value 2`] = `
Immutable.Map {
  "key": "value",
}
`;

exports[`test state handler test LITStateHandler setCollection 1`] = `
Immutable.Map {
  "collection": Immutable.List [
    "a",
    "b",
    "c",
  ],
}
`;

exports[`test state handler test LITStateHandler setCollection 2`] = `"b"`;

exports[`test state handler test LITStateHandler setCollection 3`] = `
Immutable.Map {
  "collection": Immutable.List [
    "a",
    "b",
    "c",
  ],
  "index": 1,
  "value": "b",
}
`;

exports[`test state handler test LITStateHandlerV2 set_value 1`] = `
Immutable.Map {
  "value": Immutable.Map {
    "key": "value",
  },
}
`;

exports[`test state handler test LITStateHandlerV2 set_value 2`] = `
Immutable.Map {
  "key": "value",
}
`;

exports[`test state handler test LITStateHandlerV2 setCollection 1`] = `
Immutable.Map {
  "collection": Immutable.List [
    "a",
    "b",
    "c",
  ],
}
`;

exports[`test state handler test LITStateHandlerV2 setCollection 2`] = `"b"`;

exports[`test state handler test LITStateHandlerV2 setCollection 3`] = `
Immutable.Map {
  "collection": Immutable.List [
    "a",
    "b",
    "c",
  ],
  "index": 1,
  "value": "b",
}
`;
